Atualizado Readme, correcoes nas anotacoes e correcao de bugs menores